--- a/public/css/app.css
+++ b/public/css/app.css
@@ -106,3 +106,61 @@
 {
 	text-decoration: underline;
 }
+
+.toggle
+{
+	background-color: #ebedf0;
+    border: 1px solid #ccc;
+    border-radius: 2px;
+    display: inline-block;
+    height: 29px;
+    overflow: hidden;
+    position: relative;
+    width: 101px;
+}
+
+.toggle_i
+{
+	color: #3578e5;
+    float: left;
+    text-align: center;
+    width: 50px;
+
+}
+.toggle_j
+{
+
+	background-color: #fff;
+    border-right: 1px solid #ccc;
+    border-radius: 2px;
+    border-top: none;
+    display: block;
+    float: left;
+    height: 100%;
+    position: relative;
+    width: 52px;
+    z-index: 2;
+}
+
+.toggle_k
+{
+	color: #4b4f56;
+    float: left;
+    text-align: center;
+    width: 50px;
+}
+
+.toggle label
+{
+	cursor: pointer;
+    font-size: 1.1em;
+    height: 100%;
+    left: -51px;
+    line-height: 31px;
+    position: absolute;
+    top: 0;
+    transition: .12s;
+    -webkit-user-select: none;
+    width: 200%;
+    z-index: 1;
+}
