--- a/public/css/app.css
+++ b/public/css/app.css
@@ -178,3 +178,14 @@
 }
 .table th{border-top:0px;}
 .input-group-text{border-radius:0px;}
+.loader
+{
+	position:relative;
+	top:0;
+	left:0;
+	height:100%;
+	width:100%;
+	background:rgba(255, 255, 255, .9) url("../img/misc/spinning.gif") no-repeat 50% 30%;
+	opacity:0.7;
+	z-index: 99999;
+}
