--- a/public/css/app.css
+++ b/public/css/app.css
@@ -62,7 +62,7 @@ body, html {
 	width: 100%;
 	background-size: cover;
 	background-repeat: no-repeat;
-	background-position: bottom;
+	background-position: top;
 	background-attachment:fixed;
 }
 .content
